--- a/package.json
+++ b/package.json
@@ -1,22 +1,38 @@
 {
-  "name": "lets_code",
+  "name": "code-deck",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.64",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
+    "@codemirror/lang-cpp": "^6.0.1",
+    "@codemirror/lang-java": "^6.0.0",
+    "@codemirror/lang-javascript": "^6.1.0",
+    "@codemirror/lang-python": "^6.0.2",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^13.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.13",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@uiw/codemirror-theme-bespin": "^4.12.4",
+    "@uiw/codemirror-theme-darcula": "^4.12.4",
+    "@uiw/codemirror-theme-duotone": "^4.12.4",
+    "@uiw/codemirror-theme-github": "^4.12.4",
+    "@uiw/codemirror-theme-okaidia": "^4.12.4",
+    "@uiw/codemirror-theme-xcode": "^4.12.4",
+    "@uiw/react-codemirror": "^4.12.4",
+    "axios": "^1.1.3",
+    "buffer": "^6.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-select": "^5.5.2",
     "styled-components": "^5.3.6",
-    "typescript": "^4.8.4",
-    "web-vitals": "^2.1.4"
+    "typescript": "^4.4.2",
+    "uuid": "^9.0.0",
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,6 +59,7 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.26"
+    "@types/styled-components": "^5.1.26",
+    "@types/uuid": "^8.3.4"
   }
 }
