--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "code-deck",
   "version": "0.1.0",
+  "engines": { "node": "16.16.0"},
   "private": true,
   "dependencies": {
     "@codemirror/lang-cpp": "^6.0.1",
